--- a/crawl.html
+++ b/crawl.html
@@ -58,7 +58,7 @@
       <div class="card">
         <h2>Let us create one near you</h2>
         <p>Tell us how long you’ve got and how many stops. We’ll optimise the route.</p>
-        <a class="cta" href="#" id="autoPlan">Start</a>
+        <a class="cta" href="crawl-auto.html" id="autoPlan">Start</a>
       </div>
 
       <div class="card">
@@ -84,3 +84,4 @@
   </script>
 </body>
 </html>
+
