--- a/sunny-v2.8.2-enrichment/index.html
+++ b/sunny-v2.8.2-enrichment/index.html
@@ -124,7 +124,7 @@ a.tiny { font-size:.85rem; color:var(--muted); text-decoration:none; }
     </div>
     <div class="cards" id="cards"></div>
   <div id="enrichHint" class="empty" style="position:fixed;left:8px;bottom:64px;background:rgba(255,255,255,.9);border:1px solid #eee;border-radius:10px;padding:.3rem .5rem;display:none;z-index:1200">
-    Enrichment off in local preview — deploy to Netlify to see hours.
+    Enrichment is disabled in static previews — configure a SUNNY_ENRICH_ENDPOINT to enable hours.
   </div>
 
   </div>
